--- a/Front-endDesign.html
+++ b/Front-endDesign.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.css" >
     <link rel="stylesheet" href="css/bootstrap.css" >
     
-    <title>Hannah's profile!</title>
+    <title>Hannah's portfolio!</title>
   </head>
   <body>
     <div class="fix-nav border d-flex justify-content-center align-items-center flex-lg-column bg-white" >
@@ -54,30 +54,30 @@
     <div class="row flex-fill">
       <div class="col-7 cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image:url(Front-endDesign/cover_img/cover_1.jpg);">
         <a href="Front-endDesign/healthInsurance.html" class="transition">
-          <h5 href="" class="h5 text-white">守護健康大作戰</h5>
+          <h5 href="" class="h6 text-white">守護健康大作戰</h5>
         </a>
       </div>
       <div class="col flex-grow-2 cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image:url(Front-endDesign/cover_img/cover_2.jpg);">
         <a href="Front-endDesign/judicial.html" class="transition">
-          <h5 href="" class="h5 text-white">從心認識司法</h5>
+          <h5 href="" class="h6 text-white">從心認識司法</h5>
         </a>
       </div>
     </div>
     <div class="row flex-fill">
       <div class="col cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image:url(Front-endDesign/cover_img/cover_5.jpg);">
         <a href="Front-endDesign/bli.html" class="transition">
-          <h5 href="" class="h5 text-white">勞保局提案</h5>
+          <h5 href="" class="h6 text-white">勞保局提案</h5>
         </a>      </div>
 
     </div>
     <div class="row flex-fill">
       <div class="col cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image:url(Front-endDesign/cover_img/cover_4.jpg);">
         <a href="Front-endDesign/alice.html" class="transition">
-          <h5 href="" class="h5 text-white">Alice dashbord</h5>
+          <h5 href="" class="h6 text-white">Alice dashbord</h5>
         </a>      </div>
         <div class="col-7  cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image:url(Front-endDesign/cover_img/cover_3.jpg);">
           <a href="Front-endDesign/ora2.html" class="transition">
-          <h5 href="" class="h5 text-white">Ora2 你的命定Ora2me</h5>
+          <h5 href="" class="h6 text-white">Ora2 你的命定Ora2me</h5>
         </a>      </div>
     </div>
   </div>
