--- a/Front-endDesign/bli.html
+++ b/Front-endDesign/bli.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/bootstrap-reboot.css" >
     <link rel="stylesheet" href="../css/bootstrap.css" >
     
-    <title>Hannah's profile!</title>
+    <title>Hannah's portfolio!</title>
   </head>
   <body>
     <div class="fix-nav border d-flex justify-content-center align-items-center flex-lg-column bg-white" >
@@ -51,19 +51,20 @@
     </div>
     <div class="row flex-column">
       <p class="m-0 text-s">Web Design / Front-end developer</p>
+      <p class="m-0 text-s">點擊圖片可進入網站</p>
       <p class="m-0">Design by Hannah</p>
     </div>
   </div>
 </div>
 <div class="row">
   <a target="_blank" href="https://cih1120.github.io/project_mol/">
-    <div class="offset-lg-1 col vw75 d-flex flex-column align-items-center py-5">
-      <video loop="true" autoplay="autoplay"  muted="true">
-        <source type="video/mp4" src="bli/laptop.mp4"></source>
-      </video>      
+    <div class="offset-lg-1 col vw-50 d-flex flex-column align-items-center py-5">
+      <video loop="true" autoplay="autoplay"  muted="true" class="img-fluid">
+        <source type="video/mp4" src="bli/laptop.mp4" class="img-fluid"></source>
+      </video>   
       <img src="bli/bli-03.jpg" alt="" class="img-fluid">
-      <video loop="true" autoplay="autoplay"  muted="true">
-        <source type="video/mp4" src="bli/com.mp4"></source>
+      <video loop="true" autoplay="autoplay"  muted="true" class="img-fluid">
+        <source type="video/mp4" src="bli/com.mp4" class="img-fluid"></source>
       </video>    
       <img src="bli/bli-01_02.jpg" alt="" class="img-fluid">
       <img src="bli/bli-01_03.jpg" alt="" class="img-fluid">
