--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.css" >
     <link rel="stylesheet" href="css/bootstrap.css" >
     
-    <title>Hannah's profile!</title>
+    <title>Hannah's portfolio!</title>
   </head>
   <body>
     <div class="fix-nav border d-flex justify-content-center align-items-center flex-lg-column bg-white" >
@@ -54,47 +54,47 @@
     <div class="row flex-fill">
       <div class="col cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image: url(GraphicDesign/cover_img/cover_1.jpg);">
         <a href="GraphicDesign/baphip.html"  class="transition">
-          <h5 href="" class="h5 text-white">防檢局提案廣告</h5>
+          <h5 href="" class="h6 text-white">防檢局提案廣告</h5>
         </a>
       </div>
       <div class="col cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image: url(GraphicDesign/cover_img/cover_2.jpg);">
         <a href="GraphicDesign/print.html" class="transition">
-          <h5 href="" class="h5 text-white">印刷品 Design</h5>
+          <h5 href="" class="h6 text-white">印刷品 Design</h5>
         </a>
       </div>
       <div class="col cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image: url(GraphicDesign/cover_img/cover_3.jpg);">
         <a href="GraphicDesign/banners.html" class="transition">
-          <h5 href="" class="h5 text-white">Banner Design</h5>
+          <h5 href="" class="h6 text-white">Banner Design</h5>
         </a>
       </div>
     </div>
     <div class="row flex-fill">
       <div class="col cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image: url(GraphicDesign/cover_img/cover_4.jpg);">
         <a href="GraphicDesign/nitori.html" class="transition">
-          <h5 href="" class="h5 text-white">NITORI父愁計畫</h5>
+          <h5 href="" class="h6 text-white">NITORI父愁計畫</h5>
         </a>      </div>
       <div class="col cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image: url(GraphicDesign/cover_img/cover_5.jpg);">
         <a href="GraphicDesign/D2C.html" class="transition">
-          <h5 href="" class="h5 text-white">D2C Lab</h5>
+          <h5 href="" class="h6 text-white">D2C Lab</h5>
         </aa>      </div>
       <div class="col cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image: url(GraphicDesign/cover_img/cover_6.jpg);">
         <a href="GraphicDesign/tainan.html" class="transition">
-          <h5 href="" class="h5 text-white">台南交通局廣告</h5>
+          <h5 href="" class="h6 text-white">台南交通局廣告</h5>
         </a>
       </div>
     </div>
     <div class="row flex-fill">
       <div class="col cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image: url(GraphicDesign/cover_img/cover_7.jpg);">
         <a href="GraphicDesign/logo.html" class="transition">
-          <h5 href="" class="h5 text-white">LOGO Collection</h5>
+          <h5 href="" class="h6 text-white">LOGO Collection</h5>
         </a>      </div>
         <div class="col cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image: url(GraphicDesign/cover_img/cover_8.jpg);">
           <a href="GraphicDesign/illustration.html" class="transition">
-          <h5 href="" class="h5 text-white">Illustration</h5>
+          <h5 href="" class="h6 text-white">Illustration</h5>
         </a>      </div>
         <div class="col cover bg-cover bg-position-center d-flex justify-content-center align-items-center bg-info transition" style="background-image: url(GraphicDesign/cover_img/cover_9.jpg);">
           <a href="GraphicDesign/liveBanner.html" class="transition">
-          <h5 href="" class="h5 text-white">互動式廣告</h5>
+          <h5 href="" class="h6 text-white">互動式廣告</h5>
         </a>      </div>
     </div>
   </div>
