--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.css" >
     <link rel="stylesheet" href="css/bootstrap.css" >
     
-    <title>Hannah's profile!</title>
+    <title>Hannah's portfolio!</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/3.3.6/scrollreveal.min.js"></script>
+
   </head>
   <body>
     <div class="fix-nav border d-flex justify-content-center align-items-center flex-lg-column bg-white" >
@@ -41,10 +43,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-5 col-md-12 fulid-bg hero-bg-position bg-cover"></div>
-        <section class="col-lg-7 hero-text">
-          <h1 class="font-weight-bold text-black"> <span class="text-eng">Hi!</span> 我是 <span class="text-primary text-eng">Hannah .</span></h1>
+        <section class="col-lg-7 hero-text grid">
+          <h1 class="font-weight-bold text-black"> <span class="text-eng">Hi!</span> 我是 <span class="text-primary text-eng">Hannah</span></h1>
           <h1 class="font-weight-bold text-black"><span class="text-underline-primary ">設計</span>與<span class="text-underline-indigo">前端</span>的兩棲 <span class="text-eng">Designer</span></h1>
-          <h3 class="mt-4">從事設計的第5年路上，想親手完成自己的設計變踏上前端程式不歸路。</h3>
+          <h3 class="mt-4">從事設計的第5年路上，想親手完成自己的設計<br>便踏上前端程式不歸路。</h3>
           <h5 class="mt-4">結合設計的使用者體驗思考與美感， 喜歡嘗試新技術與優化所有細節，並持續成長。</h5>
             <ul class="p-0 mt-4">
               <li class="d-block"><img src="" alt="" class="d-block">
@@ -63,15 +65,15 @@
     <!-- hero結束 -->
     <div class="container py-5 my-5" id="aboutMe">
       <div class="row mt-lg-4">
-        <div class="offset-lg-1 col-lg-3 col-12 mb-3 mb-lg-0">
+        <div class="offset-lg-1 col-lg-3 col-12 mb-3 mb-lg-0 grid grid-1">
             <h1 class="text-eng mb-4 text-black">ABOUT ME</h1>
             <h6>自高中開始接案，經手小至寶特瓶貼，大至甜點店面全店印刷設計。除了商業的平面印刷，平時之餘喜歡畫插畫舒壓，有時將插畫中的人物融合至平時的設計中。</h6>
             <h6 >大學在程式課中第一次碰到程式語言，開始喜歡程式設計，開始接觸網頁設計後更加燃起想學程式的念頭。開始在六角學院開始前端自學之路。</h6>
             <h6 >熱愛嘗試新事物、認為只有不斷學習才不在這多工時代被淘汰。更熱愛在團隊中一起突破與找出創新的方法來解決問題。</h6>
             <h6  class="mb-5">如果你想多了解我，也歡迎看看我的Resume。</h6>
-            <a href="" class="h5 b-block pl-2 bd-callout-primary">Download Resume</a>
+            <a href="https://drive.google.com/file/d/1qjwPVSF6XALW5XYu17PTFlunuIS4imSv/view?usp=sharing" target="_blank" class="h5 b-block pl-2 bd-callout-primary">Download Resume</a>
         </div>
-        <div class="col-lg-4 col-md-6 col-12 mt-4 mt-lg-0">
+        <div class="col-lg-4 col-md-6 col-12 mt-4 mt-lg-0 grid grid-2">
           <h1 class="text-eng mb-3 text-black">WORK EXPERIENCE</h1>
           <ul class="p-0">
             <li class="d-block border-top border-bottom border-dark p-2">
@@ -99,9 +101,8 @@
               <h5>Banner 製作 / 粉絲團發想 / 吉祥物製作</h4>
             </li>
           </ul>
-
         </div>
-        <div class="col-lg-3 offset-lg-0  col-md-6 col-12 mt-4 mt-lg-0">
+        <div class="col-lg-3 offset-lg-0  col-md-6 col-12 mt-4 mt-lg-0 grid grid-3">
           <h1 class="text-eng mb-4 text-black">SKILL</h1>
           <h6>illustrator / Photoshop / Sketch / Adobe XD / LightRoom / After Effects / GoogleWebDesigner / Animate / Lottie / Principle</h6>
           <h6>Html / Css / Scss / Bootstrap / BEM / OOCSS / Javascript / JQuery / RWD</h6>
@@ -117,7 +118,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <a href="GraphicDesign.html" class="h5 b-block pl-2 bd-callout-primary mr-5 ">Graphic Design.</a>
+          <a href="GraphicDesign.html" class="h5 b-block pl-2 bd-callout-primary mr-5 ">Graphic Design</a>
           <h5 class="mt-2">平面設計與插畫。</h5>
         </div>
         <div class="col">
@@ -128,57 +129,28 @@
   <!-- 跑馬燈開始 -->
       <div class="row mt-5">
         <div class="offset-md-4 col-md-7 offset-1 col-11 marquee-container">
-        <div class="grid marquee">
-          <div class="cell">
-            <a href="GraphicDesign/nitori.html">
-            <div class="content" style="background-image:url(img/WorksCover_1.jpg);">
-            </div></a>
-          </div>
-          <div class="cell"> 
-            <a href="GraphicDesign/liveBanner.html">
-            <div class="content" style="background-image:url(img/WorksCover_2.jpg);">
-            </div></a>
-          </div>
-          <div class="cell">
-            <a href="Front-endDesign/healthInsurance.html">
-            <div class="content" style="background-image:url(img/WorksCover_3.jpg);">
-            </div></a>
-          </div>
-          <div class="cell">
-            <a href="GraphicDesign/tainan.html">
-            <div class="content" style="background-image:url(img/WorksCover_4.jpg);">
-            </div></a>
-          </div>
-          <div class="cell">
-            <a href="Front-endDesign/ora2.html">
-            <div class="content" style="background-image:url(img/WorksCover_5.jpg);">
-            </div></a>
-          </div>
-          <div class="cell">
-            <a href="GraphicDesign/illustration.html">
-            <div class="content" style="background-image:url(img/WorksCover_6.jpg);">
-            </div></a>
-          </div>
-          <div class="cell">
-            <a href="GraphicDesign/illustration.html">
-            <div class="content" style="background-image:url(img/WorksCover_7.jpg);">
-            </div></a>
-          </div>
-          <div class="cell">
-            <a href="Front-endDesign/judicial.html">
-            <div class="content" style="background-image:url(img/WorksCover_8.jpg);">
-            </div></a>
-          </div>
-          <div class="cell">
-            <a href="GraphicDesign/baphip.html">
-            <div class="content" style="background-image:url(img/WorksCover_9.jpg);">
-            </div></a>
-          </div>
-          <div class="cell">
-            <a href="GraphicDesign/banners.html">
-            <div class="content" style="background-image:url(img/WorksCover_10.jpg);">
-            </div></a>
-          </div>
+          <div class="row flex-row flex-nowrap marquee">
+          <a href="GraphicDesign/nitori.html">
+          <img src="img/WorksCover_1.jpg" alt="" class="content"></a>
+          <a href="GraphicDesign/liveBanner.html">
+          <img src="img/WorksCover_2.jpg" alt="" class="content"></a>
+          <a href="Front-endDesign/healthInsurance.html">
+          <img src="img/WorksCover_3.jpg" alt="" class="content"></a>
+          <a href="GraphicDesign/tainan.html">
+          <img src="img/WorksCover_4.jpg" alt="" class="content"></a>
+          <a href="Front-endDesign/ora2.html">
+          <img src="img/WorksCover_5.jpg" alt="" class="content"></a>
+          <a href="GraphicDesign/illustration.html">
+          <img src="img/WorksCover_6.jpg" alt="" class="content"></a>
+          <a href="GraphicDesign/illustration.html">
+          <img src="img/WorksCover_7.jpg" alt="" class="content"></a>
+          <a href="Front-endDesign/judicial.html">
+          <img src="img/WorksCover_8.jpg" alt="" class="content"></a>
+          <a href="GraphicDesign/baphip.html">
+          <img src="img/WorksCover_9.jpg" alt="" class="content"></a>
+          <a href="GraphicDesign/banners.html">
+          <img src="img/WorksCover_10.jpg" alt="" class="content"></a>
+
         </div>
       </div>
       </div>
@@ -191,6 +163,46 @@
   <p class="col text-white text-center">Made with by Hannah | Copyright 2020</p>
 </footer>
 
+
+<script>
+  window.sr = ScrollReveal({ 
+    // 參數設定[註1]
+    origin: "bottom",  // 起始位置
+    distance: "30px",  // 距離
+    duration: 2000,  // 動畫時間
+    delay: 0,  // 動畫延遲時間
+    rotate: { x: 0, y: 0, z: 0 },  // 旋轉角度
+    opacity: 0,  // 透明度
+    scale: 1, // 縮放比例
+    easing: "cubic-bezier(0.6, 0.2, 0.1, 1)", // 動畫速度曲線
+    container: window.document.documentElement, // 外層
+    mobile: true, // 支援行動裝置
+    reset: false, // 每次都啟動動畫
+    useDelay: "always", // 延遲動畫次數
+    viewFactor: 0.2, // 當該物件在可視範圍內，則顯示此物件(0.2表示可視範圍20%)
+    viewOffset: { top: 0, right: 0, bottom: 0, left: 0 }, // 當外層有設定間隔造成偏移，則請設定在此維持精準度
+    beforeReveal: function (domEl) { console.log(1) }, // 當啟動顯示前，則執行此函式
+    beforeReset: function (domEl) {console.log(2) }, // 當重啟前，則執行此函式
+    afterReveal: function (domEl) {console.log(3) }, // 當啟動後，則執行此函式
+    afterReset: function (domEl) {console.log(4) } // 當重啟後，則執行此函式
+  });
+  sr.reveal( ".grid", {
+    duration: 1000,  // 動畫時間
+    delay: 0,  // 動畫延遲時間
+  });
+  sr.reveal( ".grid-1", {
+    duration: 1000,  // 動畫時間
+    delay: 0,  // 動畫延遲時間
+  });
+  sr.reveal( ".grid-2", {
+    duration: 1000,  // 動畫時間
+    delay: 250,  // 動畫延遲時間
+  });
+  sr.reveal( ".grid-3", {
+    duration: 1000,  // 動畫時間
+    delay: 500,  // 動畫延遲時間
+  });
+</script>
     
 
     <!-- Optional JavaScript -->
@@ -199,7 +211,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="js/jquery.js" ></script>
-    <script src="js/marquee.js" ></script>
- 
   </body>
 </html>
