--- a/GraphicDesign/D2C.html
+++ b/GraphicDesign/D2C.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/bootstrap-reboot.css" >
     <link rel="stylesheet" href="../css/bootstrap.css" >
     
-    <title>Hannah's profile!</title>
+    <title>Hannah's portfolio!</title>
   </head>
   <body>
     <div class="fix-nav border d-flex justify-content-center align-items-center flex-lg-column bg-white" >
