--- a/Front-endDesign/judicial.html
+++ b/Front-endDesign/judicial.html
@@ -60,11 +60,11 @@
     <video loop="true" autoplay="autoplay"  muted="true">
       <source type="video/mp4" src="judicial/top.mp4"></source>
     </video> 
-    <img src="judicial/_-01_01.jpg" alt="" class="img-fluid">
-    <img src="judicial/_-01_02.jpg" alt="" class="img-fluid">
-    <img src="judicial/_-01_03.jpg" alt="" class="img-fluid">
-    <img src="judicial/_-02_01.jpg" alt="" class="img-fluid">
-    <img src="judicial/_-02_02.jpg" alt="" class="img-fluid">
+    <img src="judicial/0101.jpg" alt="" class="img-fluid">
+    <img src="judicial/0102.jpg" alt="" class="img-fluid">
+    <img src="judicial/0103.jpg" alt="" class="img-fluid">
+    <img src="judicial/0201.jpg" alt="" class="img-fluid">
+    <img src="judicial/0202.jpg" alt="" class="img-fluid">
   </div>
 </div>
 <div class="row pb-5">
