--- a/Front-endDesign/judicial.html
+++ b/Front-endDesign/judicial.html
@@ -57,8 +57,8 @@
 </div>
 <div class="row">
   <div class="offset-lg-1 col vw75 d-flex flex-column align-items-center py-5">
-    <video loop="true" autoplay="autoplay"  muted="true">
-      <source type="video/mp4" src="judicial/top.mp4"></source>
+    <video loop autoplay muted playsinline class="img-fluid">
+      <source type="video/mp4" src="judicial/top.mp4" class="img-fluid"></source>
     </video> 
     <img src="judicial/0101.jpg" alt="" class="img-fluid">
     <img src="judicial/0102.jpg" alt="" class="img-fluid">
