國保新增按鈕

--- a/Front-endDesign/bli.html
+++ b/Front-endDesign/bli.html
@@ -59,6 +59,7 @@
 <div class="row">
   <a target="_blank" href="https://cih1120.github.io/project_mol/">
     <div class="offset-lg-1 col vw-50 d-flex flex-column align-items-center py-5">
+      <img src="bli/bli-04.jpg" alt="" class="img-fluid">
       <video loop autoplay muted playsinline class="img-fluid">
         <source type="video/mp4" src="bli/laptop.mp4" class="img-fluid"></source>
       </video>   
