--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         </div>
         <div class="col-lg-3 offset-lg-0  col-md-6 col-12 mt-4 mt-lg-0 grid grid-3">
           <h1 class="text-eng mb-4 text-black">SKILL</h1>
-          <h6>illustrator / Photoshop / Sketch / Adobe XD / LightRoom / After Effects / GoogleWebDesigner / Animate / Lottie / Principle</h6>
-          <h6>Html / Css / Scss / Bootstrap / BEM / OOCSS / Javascript / JQuery / RWD</h6>
+          <h6>illustrator / Photoshop / Sketch / Adobe XD / LightRoom / After Effects / GoogleWebDesigner / Animate / Lottie / Principle / Zeplin</h6>
+          <h6>Html /Pug / Css / Scss / Sass / Bootstrap / OOCSS / Javascript / JQuery / RWD</h6>
           <h6>Illustration / UIUX Design / Graphic Design / Front-end Design</h6>
         </div>
       </div>
